로그인/회원가입 ui 개발

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Sojuton</string>
     <string name="letter_count">%d명 이어씀</string>
     <string name="heart_count">이 소주편지는 현재 %d도</string>
+    <string name="register"><u>아직 계정이 없으신가요?</u></string>
 </resources>
